Update DelphiInterpreter.java